Correct size and positioning of search icon
The icon was grossly mispositioned for those search inputs outside
the site header. The icon was also misaligned because the even-number
icon size could not be evenly bisected within the odd-number input
height.

--- a/styles/sass/_form.scss
+++ b/styles/sass/_form.scss
@@ -58,11 +58,14 @@ textarea {
 
 .searchform {
 	display: inline-block;
-	position: relative;
 	cursor: default;
 }
+.search-field {
+	position: relative;
+}
 
-$search-icon-size: 16px;
+
+$search-icon-size: 15px;
 $search-icon-padding: $search-icon-size / 2;
 
 .search-icon {
